tests/paczka1/small_fuzzy/45315764.err
Error in line 13: ygMUhJv A514 40,9
Error in line 2: S487 A61 86,6
